[package]
name = "bundler"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
anyhow = "1.0.86"
colored = "2.1.0"
dirs = "5.0.1"
lazy_static = "1.5.0"
path-absolutize = "3.1.1"
regex = "1.10.6"
serde_json = "1.0.127"
sha = "1.0.3"
swc_atoms = "0.6.7"
swc_bundler = { version = "0.238.0", features = ["concurrent"] }
swc_common = { version = "0.37.5", features = ["tty-emitter"] }
swc_ecma_ast = "0.118.2"
swc_ecma_codegen = "0.155.1"
swc_ecma_loader = "0.49.1"
swc_ecma_parser = "0.149.1"
swc_ecma_transforms_base = "0.146.0"
swc_ecma_transforms_typescript = "0.199.0"
swc_ecma_visit = "0.104.8"
ureq = "2.10.1"
url = "2.5.2"
